...
              size: 100,
              color: Colors.blue,
            ),
            SizedBox(height: 30),

            // Login button
            ElevatedButton(key: Key('LoginButton'),
              onPressed: () {
                Navigator.push(
                  context,
                  MaterialPageRoute(builder: (context) => LoginPage()),
                );
              },
...
